# dtos/token/token-response.go
@@ -3,5 +3,5 @@ package token_dtos
 type AccessTokenResponse struct {
 	AccessToken string `json:"access_token"`
 	TokenType   string `json:"token_type"`
-	ExpiresIn   int64  `json:"expires_in"`
+	ExpiresAt   int64  `json:"expires_at"`
 }
